# MeshCutter

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CameraUtilities.h  DrawingUtils.cpp  DrawingUtils.h  Plane.cpp  Plane.h  main.cpp
